Feat: Enhance CORS configuration, update security settings, and improve reservation handling
- Added CORS configuration bean for better management of CORS settings.
- Updated security configuration to permit all requests for admin and reservation endpoints.
- Changed reservation cancellation endpoint from DELETE to PATCH for better RESTful practices.
- Introduced numberOfTickets field in ReservationResponse and Reservation models.
- Added pessimistic locking to EventRepository for safer concurrent access.
- Refactored EventService to utilize new counting method for confirmed reservations.
- Updated tests to reflect changes in reservation cancellation logic and endpoint.